# tmux-schmooze

./: README.md  pyproject.toml
tmux-schmooze/: draw_term.py  tmux-textual.py  tmux.py
tmux_schmooze/: __main__.py  tmux.py  ui.py
